force-app/main/default/objects/NSLSectorDetails__c/NSLSectorDetails__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NSL-Sector-Details</label>
</CustomObject>