force-app/main/default/objects/NSLSectorDetails__c/fields/NSL__c.field-meta.xml
<CustomField>
    <fullName>NSL__c</fullName>
    <label>NSL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>