force-app/main/default/objects/NSLSectorDetails__c/fields/NSL_Email__c.field-meta.xml
<CustomField>
    <fullName>NSL_Email__c</fullName>
    <label>NSL Email</label>
    <type>Email</type>
</CustomField>