force-app/main/default/objects/NSLSectorDetails__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>